@@ -1,0 +1,26 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<!-- you must see 3 propositions for the class attribute of indexterm -->
+<chapter xmlns="http://docbook.org/ns/docbook"><title>Example Chapter</title>
+
+<!-- index term for "Example Chapter" is a span -->
+<indexterm id="idxexchap" class='startofrange'>
+  <primary>Example Chapter</primary></indexterm>
+
+<!-- index term for "Example Chapter" also cross references the 
+     "Examples" entry in the index -->
+<indexterm><primary>Example Chapter</primary>
+  <seealso>Examples</seealso></indexterm>
+
+<!-- index term for "Chapter, Example" refers the reader to the entry
+     under which the index term is actually listed, "Example Chapter" -->
+<indexterm><primary>Chapter</primary><secondary>Example</secondary>
+  <see>Example Chapter</see></indexterm>
+
+<!-- other content -->
+
+<!-- index term, end of "Example Chapter" span -->
+<indexterm startref="idxexchap" class="endofrange"/>
+
+<para>some content</para>
+</chapter>
+<!-- xml.cache.Cache.instance().clear()-->
